istio/manifest/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: example-virtual-service
spec:
  # トラフィックの送信先ホスト（FQDN）
  hosts: 
  # 推奨: {service-name}.{namespace}.svc.cluster.local
  - example.dev.svc.cluster.local
  # トラフィックを制御するプロトコル
  http:
  - name: "example-v2-routes"
    # 条件文
    match:
    - uri:
        prefix: "/example"
    rewrite:
      uri: "/newexample"
    # どこにルーティングするか
    route:
    - destination:
        host: example.prod.svc.cluster.local
        subset: v2
  - name: "example-v1-route"
    route:
    - destination:
        host: example.prod.svc.cluster.local
        subset: v1
